Add more data to es log, add config validation, add documentation

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,4 +1,4 @@
 [mypy]
 
-[mypy-nox.*,pytest,loghandler.*,rich.*,]
+[mypy-nox.*,pytest,loghandler.*,rich.*,elasticsearch.*]
 ignore_missing_imports = True
