--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,4 +1,4 @@
 [mypy]
 
-[mypy-nox.*,pytest,loghandler.*,rich.*,elasticsearch.*]
+[mypy-nox.*,pytest,loghandler.*,rich.*,elasticsearch.*,sqlalchemy.*]
 ignore_missing_imports = True
