--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,4 +25,4 @@ jobs:
 
     - name: Run tests
       run: |
-        python -m unittest test
+        python -m unittest discover -s tests -p 'test_*.py'
