--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,11 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install -r dev-requirements.txt
 
+    - name: Install docker-compose
+      run: |
+        - sudo curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        - sudo chmod +x /usr/local/bin/docker-compose
+
     - name: Start containers
       run: |
         - docker-compose up -d
