--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,18 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      elasticsearch:
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.7.0
+        env:
+          node.name: es-node
+          discovery.type: single-node
+          cluster.name: es-data-cluster
+          bootstrap.memory_lock: true
+          ES_JAVA_OPTS: -Xms1024m -Xmx1024m
+        ports:
+          - "9200:9200"
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
@@ -22,15 +34,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -r dev-requirements.txt
-
-    - name: Install docker-compose
-      run: |
-        sudo curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-        sudo chmod +x /usr/local/bin/docker-compose
-
-    - name: Start containers
-      run: |
-        docker-compose up -d
 
     - name: Run tests
       run: |
